--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/pwa": "^0.12.1",
     "@angular/router": "~7.1.0",
+    "@angular/service-worker": "~7.1.0",
     "core-js": "^2.5.4",
+    "http-server": "^0.11.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
